<resources>
    <string name="app_name">Taza Bazar</string>
    <string name="label_home">Home</string>
    <string name="label_favorite">Favorite</string>
    <string name="label_cart">Cart</string>
    <string name="label_orders">Orders</string>
    <string name="label_profile">Profile</string>
    <string name="info_price_rupee_template">\u20B9 %1$.2f</string>
    <string name="label_all">All</string>
    <string name="label_search_product">Search Product…</string>
    <string name="action_change">Change</string>
    <string name="info_added_to_weekly_favorites">Added to Weekly Favorites</string>
    <string name="label_weekly_list">Weekly List</string>
    <string name="label_monthly_list">Monthly List</string>
    <string name="action_done">Done</string>
    <string name="label_add_to_contd">Add to…</string>
    <string name="title_my_weekly_list">My Weekly List</string>
    <string name="title_my_monthly_list">My Monthly List</string>
    <string name="title_my_favorite_list">My Favorite List</string>
    <string name="label_add_all_items_to_cart">Add All Items to Cart</string>
    <plurals name="info_no_of_items_added_to_cart">
        <item quantity="one">Added %1$d item to the Cart</item>
        <item quantity="other">Added %1$d items to the Cart</item>
    </plurals>
    <string name="info_already_carted_multi">Everything is already there 😀</string>
    <string name="info_already_carted_single">Already in the cart 😀</string>
    <string name="error_something_went_wrong">Something Went Wrong</string>
    <string name="error_max_quantity_reached">Can\'t add more than %1$d items</string>
    <string name="info_inventory_added_to_cart">%1$s - %2$s Added to cart</string>
    <string name="title_product_cart">Product Cart</string>
    <string name="label_subtotal">Subtotal</string>
    <string name="label_discount">Discount</string>
    <string name="label_delivery">Delivery</string>
    <string name="label_total">Total</string>
    <string name="label_login">Login</string>
    <string name="label_create_account">Create Account</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_name">Name</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="error_invalid_credentials">Username or Password is incorrect</string>
    <string name="error_validation_failed">Field Data is Invalid</string>
    <string name="error_passwords_must_be_same">Passwords must be same</string>
    <string name="error_invalid_phone_number">Phone Number Invalid</string>
    <string name="progress_login">Logging you in…</string>
    <string name="progress_register">Creating new account…</string>
    <string name="error_must_be_valid_email">Must be a valid email</string>
    <string name="error_field_must_not_be_empty">%1$s Must not be empty</string>
    <string name="info_welcome_back_user">Welcome back %1$s 👋</string>
    <string name="info_welcome_new_user">Welcome to Taza Bazar %1$s 👋</string>
    <string name="loading">Loading</string>
    <string name="title_profile">Profile</string>
    <string name="action_logout">Logout</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="error_email_exists">An account with this email address already exists</string>
    <string name="error_phone_exists">An account with this phone number already exists</string>
    <string name="action_place_order">Place Order</string>
    <string name="error_failed_to_place_order">Failed to place your order!</string>
    <string name="action_retry">Retry</string>
    <string name="title_preparing_your_order">Preparing your order</string>
    <string name="info_preparing_order">Your order will be prepared and will come soon</string>
    <string name="action_track_my_order">Track My Order</string>
    <string name="info_check_order_status_to_know_more">Check your order status to know more about next steps information</string>
    <string name="info_order_success_affirmation_template">%1$s, your order has been successful</string>
    <string name="info_order_successful">Your order has been successful</string>
    <string name="info_to_place_order_now">to place your order now!</string>
    <string name="info_to_view_order_history">to view your order history</string>
    <string name="info_order_id_template">Order: %1$s</string>
    <string name="error_order_details_not_found">Order details not found</string>
    <string name="action_details">Details</string>
    <string name="title_order_details">Order Details</string>
    <string name="label_ordered">Ordered</string>
    <string name="label_order_id">Order ID</string>
    <string name="label_status">Status</string>
    <string name="title_order_history">Order History</string>
    <string name="label_order_status_accepted">Accepted</string>
    <string name="label_order_status_pending">Pending</string>
    <string name="label_order_status_dispatched">Dispatched</string>
    <string name="label_order_status_delivered">Delivered</string>
    <string name="label_order_status_canceled">Canceled</string>
    <string name="info_no_previous_orders">No Previous orders</string>
</resources>