<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/navigation_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/label_home" />
    <item
        android:id="@id/navigation_favorite"
        android:icon="@drawable/ic_nav_favorite"
        android:title="@string/label_favorite" />
    <item
        android:id="@id/navigation_cart"
        android:icon="@drawable/ic_nav_cart"
        android:title="@string/label_cart" />
    <item
        android:id="@id/navigation_orders"
        android:icon="@drawable/ic_nav_orders"
        android:title="@string/label_orders" />
    <item
        android:id="@id/navigation_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/label_profile" />
</menu>