<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tzb_gray_100"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/img_order_checked"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ic_check_square" />

        <TextView
            android:id="@+id/txt_affirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_order_checked"
            android:layout_marginHorizontal="70dp"
            android:text="@string/info_order_success_affirmation_template"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="?colorPrimary"
            android:textStyle="bold"
            tools:text="Mr. Raj, your order has been successful" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_affirmation"
            android:layout_marginHorizontal="56dp"
            android:text="@string/info_check_order_status_to_know_more"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />
    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:contentPadding="@dimen/margin_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CardView.TopCorners.Small">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txt_preparing_order_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/title_preparing_your_order"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <TextView
                android:id="@+id/txt_preparing_order_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_preparing_order_header"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/info_preparing_order"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_track_order"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height_medium"
                android:layout_below="@id/txt_preparing_order_caption"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/action_track_my_order"
                android:textAllCaps="false" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

</FrameLayout>