<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="128dp"
        app:srcCompat="@drawable/tazabazar_logo" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/tzb_gray_100"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CardView.TopCorners">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/txt_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/label_sign_in"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_name"
                style="@style/Widget.App.TextInputLayout.Filled.White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_header"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/label_name"
                android:visibility="gone"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_phone"
                style="@style/Widget.App.TextInputLayout.Filled.White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_field_name"
                android:layout_marginTop="@dimen/margin_normal"
                android:hint="@string/label_phone_number"
                android:visibility="gone"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_email"
                style="@style/Widget.App.TextInputLayout.Filled.White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_field_phone"
                android:layout_marginTop="@dimen/margin_normal"
                app:endIconMode="clear_text"
                app:endIconTint="@android:color/darker_gray"
                app:errorIconDrawable="@null"
                android:hint="@string/label_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_password"
                style="@style/Widget.App.TextInputLayout.Filled.White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_field_email"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/label_password"
                app:endIconMode="password_toggle"
                app:endIconTint="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_field_confirm_password"
                style="@style/Widget.App.TextInputLayout.Filled.White"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_field_password"
                android:layout_marginTop="@dimen/margin_small"
                android:hint="@string/label_confirm_password"
                android:visibility="gone"
                app:endIconTint="@android:color/darker_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textVisiblePassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_action"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@id/text_field_confirm_password"
                android:layout_marginTop="24dp"
                android:text="@string/label_login"
                app:cornerRadius="6dp" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_indicator"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_below="@id/btn_action"
                android:layout_alignStart="@id/btn_action"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorColor="@color/tzb_green"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/progress_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_action"
                android:layout_alignTop="@id/progress_indicator"
                android:layout_alignBottom="@id/progress_indicator"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/progress_indicator"
                android:gravity="center"
                android:visibility="gone"
                tools:text="Logging you in..."
                tools:visibility="visible" />

            <com.kshitijpatil.tazabazar.widget.FadingSnackbar
                android:id="@+id/snackbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:visibility="gone"
                tools:visibility="visible" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>